--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -960,6 +960,7 @@ a.product__text {
   .thumbnail-slider {
     display: flex;
     align-items: center;
+    margin-top: 1rem;
   }
 
   .thumbnail-slider .thumbnail-list.slider {
@@ -967,10 +968,13 @@ a.product__text {
     padding: 0.5rem;
     flex: 1;
     scroll-padding-left: 0.5rem;
+    gap: 0.5rem;
   }
 
   .thumbnail-list__item.slider__slide {
     width: calc(33% - 0.6rem);
+    min-width: 60px;
+    height: 60px;
   }
 }
 
@@ -978,6 +982,7 @@ a.product__text {
   .product--thumbnail_slider .thumbnail-slider {
     display: flex;
     align-items: center;
+    margin-top: 1rem;
   }
 
   .thumbnail-slider .thumbnail-list.slider--tablet-up {
@@ -985,6 +990,7 @@ a.product__text {
     padding: 0.5rem;
     flex: 1;
     scroll-padding-left: 0.5rem;
+    gap: 0.5rem;
   }
 
   .product__media-wrapper .slider-mobile-gutter .slider-button {
@@ -993,6 +999,8 @@ a.product__text {
 
   .thumbnail-list.slider--tablet-up .thumbnail-list__item.slider__slide {
     width: calc(25% - 0.8rem);
+    min-width: 80px;
+    height: 80px;
   }
 
   .product--thumbnail_slider .slider-mobile-gutter .slider-button {
@@ -1021,10 +1029,13 @@ a.product__text {
   color: rgb(var(--color-foreground));
   cursor: pointer;
   background-color: transparent;
+  border: 2px solid transparent;
+  transition: all 0.2s ease;
 }
 
 .thumbnail:hover {
-  opacity: 0.7;
+  opacity: 0.8;
+  border-color: rgba(var(--color-foreground), 0.3);
 }
 
 .thumbnail.global-media-settings img {
@@ -1032,8 +1043,15 @@ a.product__text {
 }
 
 .thumbnail[aria-current] {
-  box-shadow: 0 0 0rem 0.1rem rgb(var(--color-foreground));
+  box-shadow: 0 0 0 2px rgb(var(--color-foreground));
   border-color: rgb(var(--color-foreground));
+  opacity: 1;
+}
+
+.thumbnail.is-active {
+  box-shadow: 0 0 0 2px rgb(var(--color-foreground));
+  border-color: rgb(var(--color-foreground));
+  opacity: 1;
 }
 
 .image-magnify-full-size {
