--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -924,8 +924,23 @@ a.product__text {
   }
 
   .thumbnail-list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/* Ensure thumbnails are always visible on desktop when there are multiple images */
+@media screen and (min-width: 750px) {
+  .thumbnail-slider {
+    display: flex !important;
+  }
+  
+  .thumbnail-slider .thumbnail-list {
+    display: flex !important;
+    grid-template-columns: none;
+  }
+  
+  .thumbnail-slider .slider-button {
+    display: flex !important;
   }
 }
 
@@ -979,14 +994,14 @@ a.product__text {
 }
 
 @media screen and (min-width: 750px) {
-  .product--thumbnail_slider .thumbnail-slider {
-    display: flex;
+  .thumbnail-slider {
+    display: flex !important;
     align-items: center;
     margin-top: 1rem;
   }
 
-  .thumbnail-slider .thumbnail-list.slider--tablet-up {
-    display: flex;
+  .thumbnail-slider .thumbnail-list {
+    display: flex !important;
     padding: 0.5rem;
     flex: 1;
     scroll-padding-left: 0.5rem;
@@ -997,14 +1012,14 @@ a.product__text {
     display: none;
   }
 
-  .thumbnail-list.slider--tablet-up .thumbnail-list__item.slider__slide {
+  .thumbnail-list .thumbnail-list__item.slider__slide {
     width: calc(25% - 0.8rem);
     min-width: 80px;
     height: 80px;
   }
 
-  .product--thumbnail_slider .slider-mobile-gutter .slider-button {
-    display: flex;
+  .thumbnail-slider .slider-button {
+    display: flex !important;
   }
 }
 
