--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -1,6 +1,7 @@
 {{ 'component-card.css' | asset_url | stylesheet_tag }}
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
 {{ 'section-related-products.css' | asset_url | stylesheet_tag }}
+{{ 'component-complementary-products.css' | asset_url | stylesheet_tag }}
 {{ 'quick-add.css' | asset_url | stylesheet_tag }}
 <script src="{{ 'quick-add.js' | asset_url }}" defer="defer"></script>
 
@@ -49,7 +50,9 @@
               show_rating: section.settings.show_rating,
               skip_styles: skip_card_product_styles,
               quick_add: 'standard',
-              section_id: section.id
+              section_id: section.id,
+              horizontal_class: true,
+              horizontal_quick_add: true
             %}
           </li>
           {%- assign skip_card_product_styles = true -%}
