--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -2,8 +2,6 @@
 {{ 'component-price.css' | asset_url | stylesheet_tag }}
 {{ 'section-related-products.css' | asset_url | stylesheet_tag }}
 {{ 'component-complementary-products.css' | asset_url | stylesheet_tag }}
-{{ 'quick-add.css' | asset_url | stylesheet_tag }}
-<script src="{{ 'quick-add.js' | asset_url }}" defer="defer"></script>
 
 {% if section.settings.image_shape == 'blob' %}
   {{ 'mask-blobs.css' | asset_url | stylesheet_tag }}
@@ -49,12 +47,11 @@
               show_vendor: section.settings.show_vendor,
               show_rating: section.settings.show_rating,
               skip_styles: skip_card_product_styles,
-              quick_add: 'standard',
               section_id: section.id,
-              horizontal_class: true,
-              horizontal_quick_add: true
+              horizontal_class: true
             %}
           </li>
+        
           {%- assign skip_card_product_styles = true -%}
         {% endfor %}
       </ul>
