--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -454,8 +454,8 @@
         {{ 'accessibility.loading' | t }}
       </p>
 
-      <!-- Subtotal and Checkout section moved here as per user request -->
-      {% section 'main-cart-footer' %}
+      <!-- Subtotal and Checkout (using snippet) -->
+      {% render 'cart-subtotal-checkout' %}
 
 
       <!-- Frequently Bought Together Section -->
